# Haskell-OpenAPI-Client-Code-Generator

./: .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  README.md  cabal.project  ci.nix  coverage.overlay  default.nix  example-configuration.yml  example-generator-configuration.yaml  flake.nix  hie.yaml  openapi-configuration.yml  openapi3-code-generator.cabal  package.yaml  shell.nix  stack.yaml  update_golden.sh  update_golden_and_example.sh
.circleci/: build_generator  config.yml  coverage  lint_generator  test_generator  test_golden  test_system_1  test_system_1_lts-18-16  test_system_1_lts-19-10  test_system_2  test_system_2_stripe  test_system_3
.circleci/golden/expected/: default.nix  openapi.cabal  shell.nix  stack.yaml
.circleci/golden/expected/src/: OpenAPI.hs
.circleci/golden/expected/src/OpenAPI/: Common.hs  Configuration.hs  CyclicTypes.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
.circleci/golden/expected/src/OpenAPI/Operations/: MultiParam.hs  NoParam.hs  Patch_pets.hs  ShowPetById.hs  SingleParam.hs
.circleci/golden/expected/src/OpenAPI/Types/: Cat.hs  Cat.hs-boot  CoverType.hs  CoverType.hs-boot  Dog.hs  Dog.hs-boot  Mischling.hs  Mischling.hs-boot  PetByAge.hs  PetByAge.hs-boot  PetByType.hs  PetByType.hs-boot  Test.hs  Test2.hs  Test6.hs  Test6.hs-boot  Test7.hs  Test7.hs-boot  Test8.hs
.circleci/specifications/: google-payment.json  petstore-running-example.yaml  stripe-api.yml  uber.json  z_complex_self_made_example.yml
.circleci/testing/level2/level2-base/: level2-base.cabal  (+1 more)
.github/workflows/: build.yml
app/: Embed.hs  Main.hs
example/: stack.yaml
example/generatedCode/: openapi.cabal  stack.yaml
example/generatedCode/src/: OpenAPI.hs
example/generatedCode/src/OpenAPI/: Common.hs  Configuration.hs  CyclicTypes.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
example/generatedCode/src/OpenAPI/Operations/: AddPet.hs  CreateUser.hs  CreateUsersWithArrayInput.hs  CreateUsersWithListInput.hs  DeleteOrder.hs  DeletePet.hs  DeleteUser.hs  FindPetsByStatus.hs  FindPetsByTags.hs  GetInventory.hs  GetOrderById.hs  GetPetById.hs  GetUserByName.hs  LoginUser.hs  LogoutUser.hs  PlaceOrder.hs  UpdatePet.hs  UpdatePetWithForm.hs  UpdateUser.hs  UploadFile.hs
example/generatedCode/src/OpenAPI/Types/: ApiResponse.hs  ApiResponse.hs-boot  Category.hs  Category.hs-boot  Order.hs  Order.hs-boot  Pet.hs  Pet.hs-boot  Tag.hs  Tag.hs-boot  User.hs  User.hs-boot
example/src/: Lib.hs
example/test/: Spec.hs
golden-output/src/OpenAPI/: Common.hs  TypeAlias.hs  Types.hs
nix/: example-client.nix  generate-client.nix  overlay.nix  pkgs.nix  pre-commit.nix  sources.json  sources.nix  tests.nix
openapi3-code-generator/: coverage.overlay  default.nix  openapi3-code-generator.cabal  package.yaml
openapi3-code-generator/app/: Main.hs
openapi3-code-generator/src/OpenAPI/: Common.hs  Generate.hs
specifications/: hetzner.json  interactive-brokers.yml  official-petstore.yaml  petstore-expanded.json  petstore-running-example.yaml  selenium.yaml  z_complex_self_made_example.yml
src/OpenAPI/: Common.hs  Generate.hs
src/OpenAPI/Generate/: Doc.hs  Flags.hs  IO.hs  Log.hs  Main.hs  Model.hs  ModelDependencies.hs  Monad.hs  Operation.hs  OptParse.hs  Reference.hs  Response.hs  SecurityScheme.hs  Types.hs  Util.hs
test/OpenAPI/Generate/: DocSpec.hs  ModelDependenciesSpec.hs  MonadSpec.hs  OperationGetOperationDescriptionSpec.hs  OperationTHSpec.hs  ReferenceSpec.hs  UtilSpec.hs
testing/golden-output/: default.nix  openapi.cabal
testing/golden-output/src/: OpenAPI.hs
testing/golden-output/src/OpenAPI/: Common.hs  Configuration.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
testing/golden-output/src/OpenAPI/Operations/: MultiParam.hs  MultiParamPathParam.hs  MultiParamWithFixedEnum.hs  NoParam.hs  Patch_pets.hs  ShowPetById.hs  SingleParam.hs  SingleParamWithFixedEnum.hs  WithDiscriminator.hs  WithDiscriminatorWithoutMapping.hs
testing/golden-output/src/OpenAPI/Types/: Cat.hs  Cat.hs-boot  CoverType.hs  CoverType.hs-boot  Dog.hs  Dog.hs-boot  Fish.hs  Fish.hs-boot  Gecko.hs  Gecko.hs-boot  GilaMonster.hs  GilaMonster.hs-boot  Guppie.hs  Guppie.hs-boot  Lizard.hs  Lizard.hs-boot  Minnow.hs  Minnow.hs-boot  Mischling.hs  Mischling.hs-boot  PetByAge.hs  PetByAge.hs-boot  PetByType.hs  PetByType.hs-boot  Shark.hs  Shark.hs-boot  Test6.hs  Test6.hs-boot  Test7.hs  Test7.hs-boot  Test8.hs  Test8.hs-boot  Test9.hs  Test9.hs-boot  Value.hs  Value.hs-boot
testing/level2/level2-base/: package.yaml
testing/level2/official-petstore/: official-petstore.cabal
testing/level2/petstore-running-example/: package.yaml  stack.yaml
testing/level2/stripe-api/: package.yaml  stripe-api.cabal
testing/level3/mock-server/: README.md  default.nix  mock-server.cabal  package.yaml  stack.yaml
testing/level3/petstore-running-example/: .gitignore  package.yaml  stack.yaml
(+81 files in other folders)
