cabal-version: 1.12

name:           openapi
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      OpenAPI
      OpenAPI.Operations.MultiParam
      OpenAPI.Operations.MultiParamPathParam
      OpenAPI.Operations.MultiParamWithFixedEnum
      OpenAPI.Operations.NoParam
      OpenAPI.Operations.SingleParam
      OpenAPI.Operations.SingleParamWithFixedEnum
      OpenAPI.Operations.WithDiscriminator
      OpenAPI.Operations.WithDiscriminatorWithoutMapping
      OpenAPI.Operations.Patch_pets
      OpenAPI.Operations.ShowPetById
      OpenAPI.Types
      OpenAPI.TypeAlias
      OpenAPI.Types.Cat
      OpenAPI.Types.CoverType
      OpenAPI.Types.Dog
      OpenAPI.Types.Fish
      OpenAPI.Types.Guppie
      OpenAPI.Types.Lizard
      OpenAPI.Types.Minnow
      OpenAPI.Types.Mischling
      OpenAPI.Types.PetByAge
      OpenAPI.Types.PetByType
      OpenAPI.Types.Shark
      OpenAPI.Types.Test6
      OpenAPI.Types.Test7
      OpenAPI.Types.Test8
      OpenAPI.Types.Test9
      OpenAPI.Types.Value
      OpenAPI.Types.Gecko
      OpenAPI.Types.GilaMonster
      OpenAPI.Configuration
      OpenAPI.SecuritySchemes
      OpenAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
