cabal-version: 1.12

name:           openapi
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      OpenAPI
      OpenAPI.Operations.Patch_pets
      OpenAPI.Operations.ShowPetById
      OpenAPI.Types
      OpenAPI.CyclicTypes
      OpenAPI.Types.Dog
      OpenAPI.Types.PetByType
      OpenAPI.Types.Test
      OpenAPI.Types.Test2
      OpenAPI.Configuration
      OpenAPI.SecuritySchemes
      OpenAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , lens
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
