cabal-version: 1.12

name:           openapi
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      OpenAPI
      OpenAPI.Operations.MultiParam
      OpenAPI.Operations.NoParam
      OpenAPI.Operations.SingleParam
      OpenAPI.Operations.Patch_pets
      OpenAPI.Operations.ShowPetById
      OpenAPI.Types
      OpenAPI.TypeAlias
      OpenAPI.Types.Cat
      OpenAPI.Types.Dog
      OpenAPI.Types.Mischling
      OpenAPI.Types.PetByAge
      OpenAPI.Types.PetByType
      OpenAPI.Configuration
      OpenAPI.SecuritySchemes
      OpenAPI.Common
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , text
    , ghc-prim
    , http-conduit
    , http-client
    , http-types
    , bytestring
    , aeson
    , unordered-containers
    , vector
    , scientific
    , time
    , mtl
    , transformers
  default-language: Haskell2010
